<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/inicio"/>
        <item
            android:id="@+id/servicioTecnico"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/servicio_tecnico"/>
        <item
            android:id="@+id/acercaDe"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/acerda_de"/>
        <item
            android:id="@+id/ubicacion"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/ubicacion" />

    </group>



    <item android:title=" ">
        <menu>
            <item
                android:id="@+id/ajustes"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/ajustes" />
            <item
                android:id="@+id/sesion"
                android:icon="@drawable/ic_launcher_background"
                android:title="@string/inicSesion" />
        </menu>
    </item>

</menu>
