<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.baren.almi.almibarenandroid.fragment.IniciarSesionFragment"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userLY"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userInicio"
            android:id="@+id/inicUserText"
            android:layout_weight="2"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etUser"
            android:inputType="text"
            android:imeOptions="actionSend"
            android:layout_weight="5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwdLY"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwdInicio"
            android:id="@+id/inicPasswdText"
            android:layout_weight="2"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etPasswd"
            android:inputType="textWebPassword"
            android:imeOptions="actionSend"
            android:layout_weight="7"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnInicSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnInicSes"
        android:layout_margin="20dp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/txtNoRegistrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:textColorLink="#505bce"
        android:gravity="center"
        android:padding="20px"
        android:onClick="onClick"
        android:clickable="true"
        android:text="@string/noregistrado"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
</LinearLayout>